# dryaml

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: .condarc  ci.yml  docs.yml  package.yml  win.yml
conda.recipe/: meta.yaml
docs/: conf.py  index.rst
dryaml/: attrdict.py
tests/: test_core.py
